--- a/style.css
+++ b/style.css
@@ -650,6 +650,7 @@ body {
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    text-align: center;
 }
 
 .footer-text a {
